tests/errors/preprocessor/_questions/incorrect/after_ident_must_be_space/after_ident_must_be_space_2.c
#defineABC

int main()
{
	return 0;
}
